# human_footprint

./: .gitignore  pyproject.toml
geometries/: smaller_test.geojson  test_small.geojson
human_footprint/: export.py  imagery_dataset.py  imagery_export.py  layers.py  losses.py  model.py  trainer.py
